# envcore

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
envcore/: __init__.py  __main__.py  audit.py  ci.py  clean.py  cli.py  config.py  doctor.py  export.py  graph.py  history.py  hooks.py  lock.py  manifest.py  minimize.py  notebook.py  resolver.py  restore.py  sync.py  tracer.py  watch.py
examples/: demo.py  flask_api.py  ml_pipeline.py  web_scraper.py
tests/: test_ci.py  test_cli.py  test_doctor.py  test_export.py  test_graph.py  test_history.py  test_hooks.py  test_lock.py  test_manifest.py  test_minimize.py  test_pywavelets_export.py  test_resolver.py  test_tracer.py
